h2. Changelog

h3. Versión 1.2

* Fixed bug copia de atributos ManyToOne y ManyToMany.
* Funcionalidad de 'include' y 'exclude' en ColumnasAutomáticas
* Opción de 'password' en los campos de tipo Texto

h3. Versión 1.1.1

* ID de tabla requerido.
* Nombres de variables en permiso arreglado.
* Página de recibos de aportación arreglada.
* El elemento Wiki pasa de utilizar WikiMedia a Textile, que es el formato que se está usando en esta propia documentación. 
* Personalizado el error 404
* Fixed minor bugs

h3. Versión 1.1

* Se permiten definir varios botones dentro de un form.
* En esta versión se introducen muchos cambios relacionados con la forma de escribir el DSL. Para adaptar a la versión 1.1 ficheros DSL escritos con versiones previas, véase la siguiente página de documentación: "Adaptación de los ficheros DSL a la versión 1.1":version1.1DSL.
* Autocompletado y validación selectivos en campos. Las propuestas del autocompletado dependen del tipo de elemento que contiene al campo.
* Mejorado el autocompletado en el editor, que ahora distingue donde tiene que autocompletar elementos y donde atributos.
* Validación de campos en las columnas de una tabla definidas mediante una función string.
* Syntax Highlighting mejorado en el editor.
* Hovers de documentación en todos los elementos del DSL, obtenidos a partir de la documentación textile del módulo.
* Hovers para las entidades y atributos que están dentro de los campos.
* Arreglado problema que aparecía al tener mas de un combo de certificados de firma.
* Se añade la aportación sin registro.
* Arreglado problema de NullPointer al acceder a la página de aportación.
* Arreglado fallo en el botón de acceso con certificado electrónico, se duplicaba el mensaje de "comprobando certificado..." si se pulsaba más de una vez.
* Arreglado error cuando un representante intenta firma la solicitud.
* Arreglado error al asignar la participación del representante en una solicitud de persona física.