@@ -1,1 +1,1 @@
-{"nombre":"texto","descripcion":"Campo de texto.","parametros":[{"nombre":"_[name]_","keyword":"name","tipo":"opcional","descripcion":"Identificador del campo de texto."},{"nombre":"campo \u003d _[campo]_","keyword":"campo","tipo":"requerido","descripcion":"Atributo donde se almacenará el texto."},{"nombre":"titulo \u003d _[string]_","keyword":"titulo","tipo":"opcional","descripcion":"Etiqueta que se mostrará al lado del campo de texto, si no se especifica se mostrará el nombre del campo."},{"nombre":"ancho \u003d _[string]_","keyword":"ancho","tipo":"opcional","descripcion":"Permite especificar el ancho del campo de texto."},{"nombre":"ayuda \u003d _[string]_","keyword":"ayuda","tipo":"opcional","descripcion":"Muestra, bajo la etiqueta del título, el texto de ayuda especificado."},{"nombre":"requerido","keyword":"requerido","tipo":"opcional","descripcion":"Si se especifica, indica que el campo deberá ser obligatorio rellenarlo."},{"nombre":"password","keyword":"password","tipo":"opcional","descripcion":"Si se especifica, indica que el campo es una contraseña, y no se mostraran caracteres sino puntos."},{"nombre":"duplicar","keyword":"duplicar","tipo":"opcional","descripcion":"Si se especifica, indica que se duplicará la caja de texto justo debajo de la original"},{"nombre":"anchoTitulo \u003d _[string]_","keyword":"anchoTitulo","tipo":"opcional","descripcion":"Permite indicar el ancho de la etiqueta de titulo."}]}
+{"nombre":"texto","descripcion":"Campo de texto.","parametros":[{"nombre":"_[name]_","keyword":"name","tipo":"opcional","descripcion":"Identificador del campo de texto."},{"nombre":"campo \u003d _[campo]_","keyword":"campo","tipo":"requerido","descripcion":"Atributo donde se almacenará el texto."},{"nombre":"titulo \u003d _[string]_","keyword":"titulo","tipo":"opcional","descripcion":"Etiqueta que se mostrará al lado del campo de texto, si no se especifica se mostrará el nombre del campo."},{"nombre":"contraseña","keyword":"contraseña","tipo":"opcional","descripcion":"Si se especifica, indica que el campo es una contraseña, y no se mostraran caracteres sino puntos."},{"nombre":"ancho \u003d _[string]_","keyword":"ancho","tipo":"opcional","descripcion":"Permite especificar el ancho del campo de texto."},{"nombre":"ayuda \u003d _[string]_","keyword":"ayuda","tipo":"opcional","descripcion":"Muestra, bajo la etiqueta del título, el texto de ayuda especificado."},{"nombre":"requerido","keyword":"requerido","tipo":"opcional","descripcion":"Si se especifica, indica que el campo deberá ser obligatorio rellenarlo."},{"nombre":"anchoTitulo \u003d _[string]_","keyword":"anchoTitulo","tipo":"opcional","descripcion":"Permite indicar el ancho de la etiqueta de titulo."}]}
