@@ -40,67 +40,13 @@ GET /Administracion/consultas fap.consultasController.index
 GET /Administracion/consultas/ejecutarConsulta  fap.ConsultasController.ejecutarConsulta
 
 # === FAPGENERATED ===
+GET /Soporte/soporte SoporteController.index
+
+POST /Soporte/soporte/incidencia SoporteController.incidencia
 GET /Principal/solicitudes SolicitudesController.index
 
 GET /Principal/solicitudes/listaSolicitudes SolicitudesController.tablalistaSolicitudes
 POST /Principal/solicitudes/nuevaSolicitud SolicitudesController.nuevaSolicitud
-GET /Soporte/soporte SoporteController.index
-
-POST /Soporte/soporte/incidencia SoporteController.incidencia
-GET /Administracion/usuarios UsuariosController.index
-
-GET /Administracion/usuarios/listaUsuarios UsuariosController.tablalistaUsuarios
-POST /Administracion/usuarios/save UsuariosController.save
-GET /Administracion/aed AedController.index
-
-POST /Administracion/aed/tiposDeDocumentos AedController.tiposDeDocumentos
-GET /Administracion/convocatoria ConvocatoriaController.index
-
-POST /Administracion/convocatoria/save ConvocatoriaController.save
-GET /Administracion/configuracionquartz ConfiguracionQuartzController.index
-
-POST /Administracion/configuracionquartz/save ConfiguracionQuartzController.save
-GET /Administracion/tabladetablas TablaDeTablasController.index
-
-GET /Administracion/tabladetablas/tabladetablas TablaDeTablasController.tablatabladetablas
-POST /Administracion/tabladetablas/actualizarDesdeFichero TablaDeTablasController.actualizarDesdeFichero
-GET /Administracion/emails EmailsController.index
-
-GET /Administracion/emails/emails EmailsController.tablaemails
-POST /Administracion/emails/actualizarDesdeFichero EmailsController.actualizarDesdeFichero
-GET /Administracion/propiedades PropiedadesController.index
-
-GET /Administracion/propiedades/tablaPropiedades PropiedadesController.tablatablaPropiedades
-GET /Administracion/popupusuario/{idEntidad}/abrir popups.PopupUsuarioController.abrir
-POST /Administracion/popupusuario/{idEntidad}/editar popups.PopupUsuarioController.editar
-POST /Administracion/popupusuario/{idEntidad}/borrar popups.PopupUsuarioController.borrar
-POST /Administracion/popupusuario/{idEntidad}/crear popups.PopupUsuarioController.crear
-POST /Administracion/popupusuario/{idEntidad}/cancelarcrear popups.PopupUsuarioController.cancelarCrear
-
-GET /Administracion/popuptabladetablas/{idEntidad}/abrir popups.PopupTablaDeTablasController.abrir
-POST /Administracion/popuptabladetablas/{idEntidad}/editar popups.PopupTablaDeTablasController.editar
-POST /Administracion/popuptabladetablas/{idEntidad}/borrar popups.PopupTablaDeTablasController.borrar
-POST /Administracion/popuptabladetablas/{idEntidad}/crear popups.PopupTablaDeTablasController.crear
-POST /Administracion/popuptabladetablas/{idEntidad}/cancelarcrear popups.PopupTablaDeTablasController.cancelarCrear
-
-GET /Administracion/popupemail/{idEntidad}/abrir popups.PopupEmailController.abrir
-POST /Administracion/popupemail/{idEntidad}/editar popups.PopupEmailController.editar
-POST /Administracion/popupemail/{idEntidad}/borrar popups.PopupEmailController.borrar
-POST /Administracion/popupemail/{idEntidad}/crear popups.PopupEmailController.crear
-POST /Administracion/popupemail/{idEntidad}/cancelarcrear popups.PopupEmailController.cancelarCrear
-
-GET /Administracion/popupconsulta/{idEntidad}/abrir popups.PopupConsultaController.abrir
-POST /Administracion/popupconsulta/{idEntidad}/editar popups.PopupConsultaController.editar
-POST /Administracion/popupconsulta/{idEntidad}/borrar popups.PopupConsultaController.borrar
-POST /Administracion/popupconsulta/{idEntidad}/crear popups.PopupConsultaController.crear
-POST /Administracion/popupconsulta/{idEntidad}/cancelarcrear popups.PopupConsultaController.cancelarCrear
-
-GET /Administracion/popupproperties/{idEntidad}/abrir popups.PopupPropertiesController.abrir
-POST /Administracion/popupproperties/{idEntidad}/editar popups.PopupPropertiesController.editar
-POST /Administracion/popupproperties/{idEntidad}/borrar popups.PopupPropertiesController.borrar
-POST /Administracion/popupproperties/{idEntidad}/crear popups.PopupPropertiesController.crear
-POST /Administracion/popupproperties/{idEntidad}/cancelarcrear popups.PopupPropertiesController.cancelarCrear
-
 GET /Solicitud/aportacion AportacionController.index
 
 GET /Solicitud/aportacion/documentos AportacionController.tabladocumentos
@@ -150,5 +96,56 @@ POST /Solicitud/popupdocaportados/{idEntidad}/editar popups.PopUpDocAportadosCon
 POST /Solicitud/popupdocaportados/{idEntidad}/borrar popups.PopUpDocAportadosController.borrar
 POST /Solicitud/popupdocaportados/{idEntidad}/crear popups.PopUpDocAportadosController.crear
 POST /Solicitud/popupdocaportados/{idEntidad}/cancelarcrear popups.PopUpDocAportadosController.cancelarCrear
+
+GET /Administracion/usuarios UsuariosController.index
+
+GET /Administracion/usuarios/listaUsuarios UsuariosController.tablalistaUsuarios
+POST /Administracion/usuarios/save UsuariosController.save
+GET /Administracion/aed AedController.index
+
+POST /Administracion/aed/tiposDeDocumentos AedController.tiposDeDocumentos
+GET /Administracion/configuracionquartz ConfiguracionQuartzController.index
+
+POST /Administracion/configuracionquartz/save ConfiguracionQuartzController.save
+GET /Administracion/tabladetablas TablaDeTablasController.index
+
+GET /Administracion/tabladetablas/tabladetablas TablaDeTablasController.tablatabladetablas
+POST /Administracion/tabladetablas/actualizarDesdeFichero TablaDeTablasController.actualizarDesdeFichero
+GET /Administracion/emails EmailsController.index
+
+GET /Administracion/emails/emails EmailsController.tablaemails
+POST /Administracion/emails/actualizarDesdeFichero EmailsController.actualizarDesdeFichero
+GET /Administracion/propiedades PropiedadesController.index
+
+GET /Administracion/propiedades/tablaPropiedades PropiedadesController.tablatablaPropiedades
+GET /Administracion/popupusuario/{idEntidad}/abrir popups.PopupUsuarioController.abrir
+POST /Administracion/popupusuario/{idEntidad}/editar popups.PopupUsuarioController.editar
+POST /Administracion/popupusuario/{idEntidad}/borrar popups.PopupUsuarioController.borrar
+POST /Administracion/popupusuario/{idEntidad}/crear popups.PopupUsuarioController.crear
+POST /Administracion/popupusuario/{idEntidad}/cancelarcrear popups.PopupUsuarioController.cancelarCrear
+
+GET /Administracion/popuptabladetablas/{idEntidad}/abrir popups.PopupTablaDeTablasController.abrir
+POST /Administracion/popuptabladetablas/{idEntidad}/editar popups.PopupTablaDeTablasController.editar
+POST /Administracion/popuptabladetablas/{idEntidad}/borrar popups.PopupTablaDeTablasController.borrar
+POST /Administracion/popuptabladetablas/{idEntidad}/crear popups.PopupTablaDeTablasController.crear
+POST /Administracion/popuptabladetablas/{idEntidad}/cancelarcrear popups.PopupTablaDeTablasController.cancelarCrear
+
+GET /Administracion/popupemail/{idEntidad}/abrir popups.PopupEmailController.abrir
+POST /Administracion/popupemail/{idEntidad}/editar popups.PopupEmailController.editar
+POST /Administracion/popupemail/{idEntidad}/borrar popups.PopupEmailController.borrar
+POST /Administracion/popupemail/{idEntidad}/crear popups.PopupEmailController.crear
+POST /Administracion/popupemail/{idEntidad}/cancelarcrear popups.PopupEmailController.cancelarCrear
+
+GET /Administracion/popupconsulta/{idEntidad}/abrir popups.PopupConsultaController.abrir
+POST /Administracion/popupconsulta/{idEntidad}/editar popups.PopupConsultaController.editar
+POST /Administracion/popupconsulta/{idEntidad}/borrar popups.PopupConsultaController.borrar
+POST /Administracion/popupconsulta/{idEntidad}/crear popups.PopupConsultaController.crear
+POST /Administracion/popupconsulta/{idEntidad}/cancelarcrear popups.PopupConsultaController.cancelarCrear
+
+GET /Administracion/popupproperties/{idEntidad}/abrir popups.PopupPropertiesController.abrir
+POST /Administracion/popupproperties/{idEntidad}/editar popups.PopupPropertiesController.editar
+POST /Administracion/popupproperties/{idEntidad}/borrar popups.PopupPropertiesController.borrar
+POST /Administracion/popupproperties/{idEntidad}/crear popups.PopupPropertiesController.crear
+POST /Administracion/popupproperties/{idEntidad}/cancelarcrear popups.PopupPropertiesController.cancelarCrear
 
 # === END FAPGENERATED ===			 
